--- a/style.css
+++ b/style.css
@@ -1,6 +1,50 @@
 .grid{
 	display:flex;
 	flex-wrap: wrap;
+	justify-content: center;
+	position: fixed;
+	right: 50%;
 	width: 400px;
-	height: 300px;
+	height: 400px;
+}
+
+.heart{
+    position: fixed;
+    top: -1vh;
+    font-size: 2rem;
+    transform: translateY(0);
+    animation: fall 3s linear;
+}
+
+@keyframes fall{
+    to{
+        transform: translateY(105vh);
+    }
+}
+
+body{
+	
+}
+
+label{
+	cursor: pointer;
+}
+
+.toggle-container{
+	position: fixed;
+	right: 30px;
+	top: 40px;
+}
+
+body.dark{
+	background-color: black;
+	color: white;
+}
+
+body.dark label{
+	color: white;
+}
+
+input{
+	visibility: hidden;
 }
